# DeBrLevel

./: .gitignore  CONTRIBUTORS.md  DeBrLevel.Core.Level.html  DeBrLevel.Core.LevelInterface.html  DeBrLevel.Datatype.ListLevel.html  DeBrLevel.Datatype.OptionLevel.html  DeBrLevel.Datatype.PairLevel.html  DeBrLevel.Map.MapLevelD.html  DeBrLevel.Map.MapLevelInterface.html  DeBrLevel.Map.MapLevelK.html  DeBrLevel.Map.MapLevelKD.html  DeBrLevel.Map.MapLevelLVLD.html  DeBrLevel.Map.MapLevelLvl.html  DeBrLevel.Map.Mapkit.MapExt.html  DeBrLevel.Map.Mapkit.MapExtInterface.html  DeBrLevel.Set.Levels.html  DeBrLevel.Set.SetLevel.html  DeBrLevel.Set.SetLevelInterface.html  DeBrLevel.Set.Setkit.SetOTwL.html  DeBrLevel.Set.Setkit.SetOTwLInterface.html  Level-DeBr.opam  Makefile  Makefile.coq.local  README.md  _CoqProject  codemeta.json  coq-debr-lvl.opam  dune  dune-project  index.html  toc.html
.github/workflows/: dunewk.yml
_TMP/: LambdaTest.v
_TMP/Map/: MapLevel.v  MapLevelInterface.v
_TMP/Map/Mapkit/: MapExt.v  MapExtInterface.v
_TMP/Map/Maps/: MapD.v  MapK.v  MapKD.v  MapLvl.v  MapLvlD.v
doc/resources/: header.html
etc/: generate_coqproject.sh
resources/: coqdocjs.js
test/: LambdaTest.v  LevelTest.v
tests/: LambdaTest.v  LevelTest.v
theories/Core/: Level.v  LevelInterface.v  PairLevel.v
theories/Datatype/: ListLevel.v  OptionLevel.v  PairLevel.v
theories/Kernel/: Level.v  LevelInterface.v  PairLevel.v  dune
theories/List/: ListLevel.v  StreamLevel.v
theories/Map/: MapLevel.v  MapLevelD.v  MapLevelInterface.v  MapLevelK.v  MapLevelKD.v  MapLevelLVLD.v  MapLevelLvl.v  dune
theories/Map/Mapkit/: MapExt.v  MapExtInterface.v
theories/Map/Maps/: MapD.v  MapK.v  MapKD.v  MapLvl.v  MapLvlD.v
theories/Set/: Levels.v  SetLevel.v  SetLevelInterface.v  dune
theories/Set/Setkit/: SetOTwL.v  SetOTwLInterface.v
