; from https://github.com/HoTT/Coq-HoTT
(coq.theory 
 (name DeBrLevel)
 (package coq-debr-lvl)
 (theories MMaps)
 (synopsis "Heart of the library, it contains module types that defined Level and modules."))

(include_subdirs qualified)

(rule
 (target _CoqProject)
 (deps
  ./etc/generate_coqproject.sh
  (source_tree theories))
 (mode promote)
 (package coq-debr-lvl)
 (action
  (setenv
   GENERATE_COQPROJECT_FOR_DUNE
   true
   (bash ./etc/generate_coqproject.sh))))
